// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicLogin /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-fnGiBr fwOxJt page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-fnGiBr fwOxJt page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with logInError 1`] = `
<div>
  <div
    class="sc-fnGiBr fwOxJt page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <span
      class="sc-ksBlkl bLCpBX"
    >
      <span
        class="sc-hBxehG cqQowO"
      >
        Something went wrong logging you in
        <br />
        Invalid session
        <br />
        <a
          class="sc-iBYQkv jNlLug"
          href="/login"
        >
          Try logging in again
        </a>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with loggingIn=true 1`] = `
<div>
  <div
    class="sc-fnGiBr fwOxJt page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-fnGiBr fwOxJt page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logged in
      </h1>
    </div>
    <span
      class="sc-ksBlkl bLCpBX"
    >
      Logged in!
      <br />
      You will now be redirected to the 
      account
       page
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="account"
      >
        Not been redirected? Click here
      </a>
    </span>
  </div>
</div>
`;
